# grapphs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
.github/: requirements.package.txt
.github/actions/build-grapphs/: action.yml
.github/actions/configure-grapphs/: action.yml
.github/actions/package-grapphs/: action.yml
.github/workflows/: cmake.yml  package.yml  release.yml  test.yml
cmake/: Grapphs.cmake  GrapphsConan.cmake  GrapphsVersion.cmake
include/grapphs/: adjacency_list.h  adjacency_matrix.h  astar.h  flood.h  graph.h  graph_view.h  static_adjacency_matrix.h
include/grapphs/algorithms/: astar.h  bfs_traversal.h  dfs_traversal.h  flood.h  rlo_traversal.h  traversal.h
modules/graphviz/: CMakeLists.txt
modules/graphviz/include/grapphs/: dot.h  graph_writer.h
modules/graphviz/tests/: tests.cpp
modules/svg/: CMakeLists.txt
modules/svg/include/grapphs/: svg.h
modules/svg/src/grapphs/: svg.cpp
modules/svg/tests/: tests.cpp
samples/: CMakeLists.txt  conanfile.txt
samples/libosm/: CMakeLists.txt
samples/libosm/include/grapphs/osm/: parse.h  way.h
samples/libosm/src/grapphs/osm/: parse.cpp  way.cpp
samples/osm_explorer/: CMakeLists.txt  main.cpp
scripts/: detect_version.py  maze_gen.py
tests/: CMakeLists.txt  adjacency_list.cpp  adjacency_matrix.cpp  astar.cpp  conanfile.py  iteration.cpp  maze.cpp  tests.cpp  traversal.cpp  traversal_graph.dot
tests/shared/grapphs/tests/: geometry.h  mazes.cpp  mazes.h  string_helper.h  traversal_order.cpp  traversal_order.h
visualization/: CMakeLists.txt
visualization/include/grapphs/: dot.h  graph_writer.h
visualization/src/grapphs/: dot.cpp
visualization/tests/: tests.cpp
